[gd_scene load_steps=9 format=3 uid="uid://bc08dhoyyn3kv"]

[ext_resource type="PackedScene" uid="uid://d1kfe3oelr2c5" path="res://ui.tscn" id="1_ykwlq"]
[ext_resource type="Script" path="res://Camera3D.gd" id="2_54n55"]
[ext_resource type="Script" path="res://ui.gd" id="3_hp4q1"]
[ext_resource type="Script" path="res://scripts/fail/stderr/usb/sandbox/GenericSystemNode3D.gdj" id="3_ij7mv"]
[ext_resource type="Script" path="res://ManeuverLines_logic.gd" id="4_xnrv5"]
[ext_resource type="PackedScene" uid="uid://bi803kkhwkx3x" path="res://debug_panel.tscn" id="5_x0y65"]
[ext_resource type="PackedScene" uid="uid://tjj17exnlxgk" path="res://maneuver_ui.tscn" id="6_hrfy0"]

[sub_resource type="Environment" id="Environment_sus5a"]
background_mode = 1

[node name="Root" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sus5a")

[node name="UI" parent="." node_paths=PackedStringArray("camera") instance=ExtResource("1_ykwlq")]
script = ExtResource("3_hp4q1")
camera = NodePath("../Camera3D")

[node name="SolarSystem" type="Node3D" parent="." node_paths=PackedStringArray("camera", "lines")]
script = ExtResource("3_ij7mv")
camera = NodePath("../Camera3D")
lines = NodePath("../Lines")
line_color = Color(0.470588, 0.858824, 1, 0.286275)

[node name="Lines" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ManeuverLines" type="Control" parent="." node_paths=PackedStringArray("simNode")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("4_xnrv5")
simNode = NodePath("../SolarSystem")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 2.08165e-12, 200)
script = ExtResource("2_54n55")

[node name="DebugPanelz" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="DebugPanelz"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -114.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25

[node name="GridContainer" type="GridContainer" parent="DebugPanelz/MarginContainer"]
layout_mode = 2
columns = 6

[node name="x" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "x"

[node name="xValLabel" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="y" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "y"

[node name="yValLabel" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="z" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25

[node name="zValLabel" type="Label" parent="DebugPanelz/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "x"

[node name="DebugPanel" parent="." node_paths=PackedStringArray("sim", "camera") instance=ExtResource("5_x0y65")]
sim = NodePath("../SolarSystem")
camera = NodePath("../Camera3D")

[node name="ManeuverUI" parent="." instance=ExtResource("6_hrfy0")]

[connection signal="maneuverChanged" from="ManeuverUI" to="SolarSystem" method="maneuver_changed"]
